--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ URI     : https://colorlib.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
+    <meta name="description" content="Kensai - Landing Page">
     <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
 
     <!-- Font -->
@@ -68,7 +68,7 @@ URI     : https://colorlib.com
                 <div class="col-12 col-lg-6">
                     <br><br><br>
                     <div style="margin-left:70px; text-align: left;">
-                        <p style="font-size: 16px;"><left/>Cocok untuk bisnis Resto, Rumah Makan, Cafe, atau Warkop.<br> Pantau, atur, dan jalankan bisnis F&B anda dengan lebih santai . . . </p> 
+                        <p style="font-size: 16px; color:#fff"><left/>Cocok untuk bisnis Resto, Rumah Makan, Cafe, atau Warkop.<br> Pantau, atur, dan jalankan bisnis F&B anda dengan lebih santai . . . </p> 
 
                         <h4>&#10004; Monitoring pendapatan usaha dan kinerja pegawai </h4>
                         <h4>&#10004; Manajemen pembayaran  (Point of Sale) </h4>
@@ -354,7 +354,7 @@ URI     : https://colorlib.com
 
                 <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                 <h2>Upadate Info Terkini</h2>
-                <p class="tagline">Dapatkan info terkini dari Kensai tentang perbaharuan aplikasi dan berita lainnya dengan mendaftarkan diri pada antrian demo penggunaan aplikasi Kensai</p>
+                <p class="tagline">Dapatkan info terkini dari Kensai tentang pembaharuan aplikasi dan berita lainnya dengan mendaftarkan diri pada antrian demo penggunaan aplikasi Kensai</p>
                 <div class="my-4">
 
                     <a href="#" class="btn btn-light">JADWALKAN DEMO SEKARANG</a>
