tinggal video, why, fitur(pemilik), langkah, contact.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@ URI     : https://colorlib.com
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo" height="40" width="40"> <b>KENSAI</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="#home">BERANDA <span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link active" href="#home">BERANDA<span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#why">Kenapa Memilih kami?</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#features">FITUR</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">SMS/TELP.</a> </li>
+                                <li class="nav-item"><a href="#" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Jadwalkan Demo</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -68,7 +69,7 @@ URI     : https://colorlib.com
                 <div class="col-12 col-lg-6">
                     <br><br><br>
                     <div style="margin-left:70px; text-align: left;">
-                        <p style="font-size: 16px; color:#fff"><left/>Cocok untuk bisnis Resto, Rumah Makan, Cafe, atau Warkop.<br> Pantau, atur, dan jalankan bisnis F&B anda dengan lebih santai . . . </p> 
+                        <p style="font-size: 16px; color:#fff"><left/>Cocok untuk bisnis Resto, Rumah Makan, Cafe, atau Warkop.<br> Pantau, atur, dan jalankan bisnis Food & Beverage anda dengan lebih santai . . . </p> 
 
                         <h4>&#10004; Monitoring pendapatan usaha dan kinerja pegawai </h4>
                         <h4>&#10004; Manajemen pembayaran  (Point of Sale) </h4>
@@ -78,8 +79,9 @@ URI     : https://colorlib.com
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="images/iphonex.png" alt="phone">
-                    <!-- <iframe width="500" height="325" src="https://www.youtube.com/embed/IHNzOHi8sJs?controls=0"></iframe> -->
+                    <!-- <img src="images/iphonex.png" alt="phone"> -->
+                    <iframe width="500" height="325" src="https://www.youtube.com/embed/0U12wxj5-00?controls=0"></iframe>
+                    
                 </div>
             </div>
         </div>
@@ -151,7 +153,7 @@ URI     : https://colorlib.com
         <div class="container">
             <div class="section-title">
                 <small>FITUR</small>
-                <h3>Yang Resto & Cafe Butuhkan</h3>
+                <h3>Yang F&B Butuhkan</h3>
             </div>
 
             <ul class="nav nav-tabs nav-justified" role="tablist">
@@ -304,7 +306,7 @@ URI     : https://colorlib.com
             </div>
 
             <div class="card-deck">
-                <div class="card pricing">
+                <div class="card pricing popular">
                     <div class="card-head">
                         <small class="text-primary">3 Bulan Pertama</small>
                         <span class="price">Gratis</span>
