--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ URI     : https://colorlib.com
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <!-- <img src="images/iphonex.png" alt="phone"> -->
-                    <iframe width="500" height="325" src="https://www.youtube.com/embed/0U12wxj5-00?controls=0"></iframe>
+                    <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid"></div> 
+                    <!-- <iframe width="500" height="325" src="https://www.youtube.com/embed/0U12wxj5-00?controls=0"></iframe> -->
                     
                 </div>
             </div>
