--- a/index.html
+++ b/index.html
@@ -62,13 +62,20 @@ URI     : https://colorlib.com
             <h1>Butuh asisten untuk bisnis F&B Anda?!</h1>
             <p class="tagline"><i><b>“Mbak saya duluan datang ya! Kenapa meja itu duluan diantar?!!”</b></i>
             <br>Sering dapat keluhan serupa?! KENSAI punya solusinya! </p>
-            <a href="#formDaftarDemo" class="btn btn-light btn-lg">JADWALKAN DEMO SEKARANG</a>
-
-            <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/dc4Jx590jv4?controls=0"></iframe></div>
+            
+            <a href="#formDaftarDemo" class="btn btn-light btn-cta">JADWALKAN DEMO SEKARANG</a>
+            <a href="#" class="btn btn-light btn-cta" data-toggle="modal" data-target="#mdlVideo">Tonton Videonya </a>
+            <div class="img-holder mt-3"><img src="images/produk.png" width="75%" height="75%" alt="phone" class="img-fluid" ></div>
+            <!-- <div class="row">
+            <div class="col-12 col-lg-4">
+                <a href="#formDaftarDemo" class="btn btn-light btn-cta">JADWALKAN DEMO SEKARANG</a>
+                <a href="#" class="btn btn-light btn-cta" data-toggle="modal" data-target="#mdlVideo">Tonton Videonya </a>
+            </div>
+            <div class="col-12 col-lg-8">
+                <div class="img-holder mt-3"><img src="images/produk.png" width="85%" height="85%" alt="phone" class="img-fluid" ></div>
+            </div> -->
         </div>
-        <!-- <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid"></div> -->
-        
-        <!-- <a href="#" class="btn btn-light" data-toggle="modal" data-target="#mdlVideo">VIDEO</a> -->
+        </div>       
     </header>
 
     <div class="section light-bg" id="why">
@@ -151,7 +158,7 @@ URI     : https://colorlib.com
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="pelayan">
                     <div class="d-flex flex-column flex-lg-row">
-                        <img src="images/home-pelayan.png" alt="pelayan" width="225" height="340"class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <img src="images/home-pelayan.png" alt="aplikasi pelayan" width="20%" height="auto"class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
 
                             <h2>Kelola Pesanan Pelanggan</h2>
@@ -160,7 +167,7 @@ URI     : https://colorlib.com
                                 &#10004; Pelayan & pegawai dapur dapat selalu memantau pelanggan yang belum selesai dilayani<br>
                                 &#10004; Info pesanan otomatis terkirim ke kasir
                             </p>
-                            <p> Segera hadir di <img src="images/play-store-badge.png" alt="phone" width="125" height="40">
+                            <p>Segera hadir di <img src="images/play-store-badge.png" width="20%" height="auto">
                             </p>
 
                         </div>
@@ -168,7 +175,7 @@ URI     : https://colorlib.com
                 </div>
                 <div class="tab-pane fade" id="kasir">
                     <div class="d-flex flex-column flex-lg-row">
-                        <img src="images/Pembayaran.png" alt="kasir" width="425" height="230" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <img src="images/Pembayaran.png" alt="aplikasi kasir" width="40%" height="auto" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <h2>Tangani Pembayaran</h2>
                             <p class="lead">dan rekap penjualan harian </p>
@@ -176,22 +183,24 @@ URI     : https://colorlib.com
                                 &#10004; Mendukung pembayaran non-tunai<br>
                                 &#10004; Rekap penjualan harian dan bulanan<br>
                             </p>
-                            <p> Segera hadir di <img src="images/play-store-badge.png" alt="phone" width="125" height="40">
+                            <p>Segera hadir di <img src="images/play-store-badge.png" width="25%" height="auto">
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pemilik">
                     <div class="d-flex flex-column flex-lg-row">
-                        <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <img src="images/pemilik.png" alt="aplikasi pemilik" width="40%" height="auto" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
-                            <h2>Monitoring Usaha & Karyawan</h2>
-                            <p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
-                                congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                            <h2>Monitoring Usaha</h2>
+                            <p class="lead">memantau perkembangan bisnis dan kinerja karyawan </p>
+                            <p>&#10004; Melihat laju penjualan<br>
+                                &#10004; Mengetahui menu favorit minggu ini secara tepat<br>
+                                &#10004; Mengawasi persediaan dapur<br>
+                                &#10004; Mengawasi kinerja karyawan<br>
+                                &#10004; Rekap penjualan harian dan bulanan<br>
                             </p>
-                            <p> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
-                                sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                            <p>Segera hadir di <img src="images/play-store-badge.png" width="25%" height="auto">
                             </p>
                         </div>
                     </div>
@@ -302,7 +311,7 @@ URI     : https://colorlib.com
                 <div class="card pricing popular">
                     <div class="card-head">
                         <small class="text-primary">Berbayar</small>
-                        <span class="price">IDR 300.000<sub>/bulan</sub></span>
+                        <span class="price">IDR 290.000<sub>/bulan</sub></span>
                     </div>
                     <ul class="list-group list-group-flush">
                         <div class="list-group-item"><b>Manajemen Pemesanan Menu</b></div>
@@ -331,20 +340,20 @@ URI     : https://colorlib.com
         <div class="container">
             <div class="call-to-action">
 
-                <!-- <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div> -->
-                <h2>Demo Kensai</h2>
-                <p class="tagline">Dapatkan info terkini dari Kensai tentang pembaharuan aplikasi dan berita lainnya dengan mendaftarkan diri pada antrian demo penggunaan aplikasi Kensai</p>
-                <!-- <div class="my-4">
-                    <a href="#" class="btn btn-light">JADWALKAN DEMO SEKARANG</a>
-                </div> -->
+                <img src="images/logo3.png" width="40%" height="auto" class="img-fluid" alt="logo">
+                <!-- <h2>Demo Kensai</h2> -->
+                <p class="tagline" font-size="19px">Dapatkan info terkini dari Kensai tentang pembaharuan aplikasi dan berita lainnya dengan mendaftarkan diri pada antrian demo penggunaan aplikasi Kensai</p>
                 <div class="my-4">
+                    <a href="#" class="btn btn-light">JADWALKAN DEMO SEKARANG</a>
+                </div>
+                <!-- <div class="my-4">
                     <form>
                         <input class="form-control form-control-lg" type="text" placeholder="Nama">
                         <input class="form-control form-control-lg" type="text" placeholder="No.Hp">
                         <input class="form-control form-control-lg" type="text" placeholder="Email">
                         <a href="#" class="btn btn-light btn-block form-control-lg">DAFTAR</a>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -383,12 +392,12 @@ URI     : https://colorlib.com
     <!-- // end .section -->
 
     <div class="modal fade" id="mdlVideo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg video" role="document">
         <div class="modal-content">
         <button type="button" class="close top-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div class="modal-body">
               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe src="https://www.youtube.com/embed/0U12wxj5-00" frameborder="0" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/dc4Jx590jv4" frameborder="0" allowfullscreen></iframe>
              </div>
           </div>
         </div>
